# plateforme-accueil

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  Un exemple pour François.html  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
accueil/: views.py
accueil/static/accueil/: exemple-francois.html
accueil/static/accueil/css/: main.css
accueil/static/accueil/img/: ASSETS.md
accueil/static/accueil/js/: hero.js  iframe-embed.js  matomo.js  profils.js  resize-reporter.js  select-theme.js  villes.js
accueil/templates/accueil/: base.html  index.html
config/: settings.py  urls.py
tests/: conftest.py  test_rendering.py
