[project]
name = "plateforme-accueil"
version = "0.1.0"
description = "Vitrine server-rendered pour La plateforme de l'inclusion"
requires-python = ">=3.14"
license = "AGPL-3.0-or-later"
dependencies = [
    "django>=6.0",
    "gunicorn>=23.0",
    "whitenoise>=6.8",
]

[dependency-groups]
dev = [
    "ruff>=0.12",
    "pytest>=8.3",
    "pytest-django>=4.11",
]

[tool.ruff]
target-version = "py314"
line-length = 119

[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "TID", # flake8-tidy-imports
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["accueil", "config"]
lines-after-imports = 2

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py"]
